--- a/docs/api/unreleased/cli/i18n.md
+++ b/docs/api/unreleased/cli/i18n.md
@@ -13,7 +13,7 @@
 <h3 id="functions-merge_command_config_n_help_text"><a href="#functions-merge_command_config_n_help_text"><pre>merge_command_config_n_help_text</pre></a></h3>
 
 ```python
-(raw_command_config: dict[str, typing.Any])
+(raw_command_config: dict[str, typing.Any]) → dict[str, typing.Any]
 ```
 
 ---
